<resources>
    <string name="app_name">FYP2</string>
    <string name="detect_it">Detect It</string>
    <string name="profile">Profile</string>
    <string name="detect">Detect</string>
    <string name="others">Others</string>
    <string name="image_placeholder">Image Placeholder</string>
    <string name="about_us">About Us</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="back">Back</string>
    <string name="insert">Insert</string>
    <string name="result">Result</string>
    <string name="again">Again</string>
    <string name="done">Done</string>
    <string name="other_help">Help</string>
    <string name="other_settings">Settings</string>
    <string name="other_about_us">About Us</string>
</resources>