<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/detect_bg"
    tools:ignore="ExtraText"
    tools:context=".result">

    <!-- Back Button -->
    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:ignore="RelativeOverlap" />

    <!-- Help Button (top-right corner) -->
    <ImageButton
        android:id="@+id/btnHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="10dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/help"
        android:src="@android:drawable/ic_menu_help" />

    <!-- Image Display -->
    <ImageView
        android:id="@+id/image_view"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_below="@id/buttonBack"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/image_placeholder" />

    <!-- Detect TextView inside ScrollView -->

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/image_view"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/conclusion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detect_it"
            android:textColor="#000"
            android:textSize="25dp"
            android:textStyle="bold" />
    </ScrollView>

    <!-- Insert Pic -->

    <!-- Done -->
    <Button
        android:id="@+id/again"
        android:layout_width="122dp"
        android:layout_height="60dp"
        android:layout_below="@id/scroll_view"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:text="@string/again" />

    <Button
        android:id="@+id/done"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_below="@+id/scroll_view"
        android:layout_marginStart="40dp"
        android:layout_toEndOf="@+id/again"
        android:text="@string/done" />

</RelativeLayout>
