<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/detect_bg"
    tools:ignore="ExtraText"
    tools:context=".cropper">

    <!-- Back Button -->
    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:ignore="RelativeOverlap" />

    <!-- Help Button (top-right corner) -->
    <ImageButton
        android:id="@+id/btnHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="10dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/help"
        android:src="@android:drawable/ic_menu_help" />

    <!-- Cropper function (flip and rotate the image) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/buttonBack"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/btnRotate"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="188dp"
            android:src="@drawable/rotate_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/btnFlip"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/flip_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnRotate"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 图片显示框 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/image_view"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:layout_below="@id/buttonBack"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="60dp"
        android:background="#D3D3D3">

        <com.canhub.cropper.CropImageView
            android:id="@+id/cropImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 检查结果按钮 -->
    <Button
        android:id="@+id/btn_result"
        android:layout_width="146dp"
        android:layout_height="82dp"
        android:layout_below="@+id/image_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/result" />

</RelativeLayout>